POO: Método contrutor e correção de exercicios

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-/4semestre/POO/prjRetangulo/nbproject/private/
-/4semestre/POO/prjRetangulo/build/
-/4semestre/POO/prjCirculo/nbproject/private/
+/4semestre/POO/**/nbproject/private/
+/4semestre/POO/**/build/
+/4semestre/POO/**/nbproject/private/
+/4semestre/POO/**/nbproject/private/
+/4semestre/POO/**/build/
+/4semestre/POO/**/dist/
+/4semestre/POO/**/nbproject/private/
+/4semestre/POO/**/build/
+/4semestre/POO/**/build/
+/4semestre/POO/**/nbproject/private/
+/4semestre/POO/**/build/
