--- a/4semestre/POO/prjPOOBrunoLeonardoMatheus/nbproject/project.properties
+++ b/4semestre/POO/prjPOOBrunoLeonardoMatheus/nbproject/project.properties
@@ -27,10 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/prjBrunoLeonardoMatheus.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ojdbc6_g.jar=C:\\Users\\saobanha\\Downloads\\ojdbc6_g.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.CopyLibs.classpath}:\
+    ${file.reference.ojdbc6_g.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=fatec.poo.model.view.Menu
+main.class=fatec.poo.model.view.GUIMenu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
