--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 **.gif filter=lfs diff=lfs merge=lfs -text
 **.pdf filter=lfs diff=lfs merge=lfs -text
 **.xlsx filter=lfs diff=lfs merge=lfs -text
+**.jar filter=lfs diff=lfs merge=lfs -text
+
